# Uchat

./: README.md
app/: app.json  package-lock.json  package.json
app/src/: App.tsx  settings.tsx
app/src/screens/: LoginScreen.tsx  WelcomeScreen.tsx
server/: Cargo.toml
server/src/: constants.rs  main.rs  schema.rs
server/src/models/: user.rs
server/src/routes/: users.rs
