[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
env_logger = "0.9.0"
log = "0.4.17"
scrypt = "0.10.0"
jsonwebtoken = "8.1.1"
actix-session = {version = "0.7.1", features = ["redis-rs-tls-session"]}
